# info-demons

./: .gitignore  BuildHistogram.cxx  HistogramField.h  HistogramField.txx  LabelDiffeomorphicDemonsRegistrationFilter.h  LabelESMDemonsRegistrationFunction.h  LabelESMDemonsRegistrationFunction.txx  LabelMultiResolutionPDEDeformableRegistration.h  MultiChannelDemon.cxx  MultiChannelMultiResolution.h  SoftHistogram.h
doc/: ExperimentReport1.tex  wei_intergroup.bib
doc/figs/wm/: Thumbs.db
docs/: JSDemons.tex  arts.pptx  wei.bib
src/: BuildHistogram.cxx  CMakeLists.txt  HistogramField.h  LabelDiffeomorphicDemonsRegistrationFilter.txx  LabelESMDemonsRegistrationFunction.txx  LabelMultiResolutionPDEDeformableRegistration.txx  MultiChannelMultiResolution.txx  NormalizeHistogram.cxx  SoftHistogram.h
